Fix layout issues in CSS

--- a/src/app/wtfindexer/wtfindexer.component.css
+++ b/src/app/wtfindexer/wtfindexer.component.css
@@ -1,51 +1,46 @@
-mat-grid-list#options {
-     margin-top: 15px;
-     max-width:500px;
-}
-
 #episodefilter {
-  margin-left: 25px;
-  margin-top: 5px;
+  margin-left: 5%;
+  margin-top: 1%;
   max-width: 200px;
 }
 
 #IMDBFilter {
+     position: absolute;
+     top: 6%;
+     left: 55.5%;
+     max-width: 200px;
+}
+
+.app-loading {
+  /*position: absolute;
+  left: 125px;
+  top:-120px;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.app-loading .spinner {
+  height: 200px;
+  width: 200px;
+  animation: rotate 2s linear infinite;
+  transform-origin: center center;
   position: absolute;
-     top: 18%;
-     left: 56%;
+  /*top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;*/
+  margin: auto;
 }
 
-mat-paginator.imdbPaginator {
-  position: absolute; 
-  left: 55%;
-  top: 175px;
-}
-
-/* Widen select dropdown in paginator because its too narrow with 4 digit values */
-::ng-deep mat-paginator .mat-select-value {
-  min-width: 30px !important;
-  max-width: 100px !important;
-}
-
-.episodeTable {
-  overflow: auto;
-  /*max-width: 200px;*/
-  max-width: 40%;
-  margin-top: 25px;
-}
-
-mat-grid-list.filter {
-  max-width: 250px;
-}
-
-.episodeTable th.mat-header-cell:nth-child(1), .episodeTable th.mat-header-cell:nth-child(2),.episodeTable th.mat-header-cell:nth-child(5)  {
-    min-width: 70px;
-    white-space: wrap;
-    padding-left: 0px;
-}
-
-.episodeTable th.mat-header-cell:nth-child(1) {
-    padding-left: 15px !important;
+.app-loading .spinner .path {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out infinite;
+  stroke-linecap: round;
+  stroke: #ddd;
 }
 
 .cdk-column-ReleaseDate {
@@ -79,9 +74,36 @@ mat-grid-list.filter {
     white-space: wrap !important;
 }
 
+.episodePaginator{     
+  position: absolute;
+  left: 25px;
+}
+
+.episodeTable {
+  overflow: auto;
+  max-width: 40%;
+  margin-top: 5%;
+}
+
+.episodeTable th.mat-header-cell:nth-child(1), .episodeTable th.mat-header-cell:nth-child(2),.episodeTable th.mat-header-cell:nth-child(5)  {
+    min-width: 70px;
+    white-space: wrap;
+    padding-left: 0px;
+}
+
+.episodeTable th.mat-header-cell:nth-child(1) {
+    padding-left: 15px !important;
+}
+
+.imdbPaginator {
+  position: absolute; 
+  left: 55%;
+  top: 12%;
+}
+
 .imdbTable {
      position: absolute;
-     top: 36%;
+     top: 21%;
      left: 55%;
 }
 
@@ -101,38 +123,7 @@ mat-grid-list.filter {
     white-space: wrap;
 }
 
-.app-loading {
-    /*position: absolute;
-    left: 125px;
-    top:-120px;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-  }
-  .app-loading .spinner {
-    height: 200px;
-    width: 200px;
-    animation: rotate 2s linear infinite;
-    transform-origin: center center;
-    position: absolute;
-    /*top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;*/
-    margin: auto;
-  }
-
-  .app-loading .spinner .path {
-    stroke-dasharray: 1, 200;
-    stroke-dashoffset: 0;
-    animation: dash 1.5s ease-in-out infinite;
-    stroke-linecap: round;
-    stroke: #ddd;
-  }
-  
-  @keyframes rotate {
+@keyframes rotate {
     100% {
       transform: rotate(360deg);
     }
@@ -158,4 +149,19 @@ mat-grid-list.filter {
 
 .mat-form-field {
      width: 100%;
+}
+
+mat-grid-list.filter {
+  max-width: 250px;
+}
+
+mat-grid-list#options {
+  margin-top: 15px;
+  max-width:500px;
+}
+
+/* Widen select dropdown in paginator because its too narrow with 4 digit values */
+::ng-deep mat-paginator .mat-select-value {
+  min-width: 30px !important;
+  max-width: 100px !important;
 }
